# buscoengino

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: stop_words.txt
docs/: diagrama_motor_busqueda.excalidraw
src/cli/: main.py
src/search_engine/: __init__.py
src/search_engine/config/: __init__.py  settings.py
src/search_engine/indexing/: vocabulary.py
src/search_engine/ingestion/: loader.py
src/search_engine/models/: documents.py
src/search_engine/preprocessing/: normalizer.py  stopwords.py  tokenizer.py
src/search_engine/ranking/: scorer.py  tfidf.py
src/search_engine/search/: __init__.py  engine.py  feedback.py
tests/: test_engine.py  test_feedback.py
